--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         </div>
     </nav>
     <section id="home">
-       <marquee direction="left" style="background-color: lightblue;">***Feel free to ask your queries on dpsraipur@gmail.com***</marquee>
+        <marquee direction="left" style="background-color: lightblue;">***Feel free to ask your queries on dpsraipur@gmail.com***</marquee>
         <iframe width="100%" height="700" src="https://www.youtube.com/embed/ZB5zD5_gU7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section id="contact">
         <h2>Contact Us</h2>
         <hr>
-        <div class="contact1 col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d951921.0923989499!2d81.4878144!3d21.2539739!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6bc2fb97bb5469cd!2sDelhi%20Public%20School%2C%20Raipur!5e0!3m2!1sen!2sin!4v1629215865235!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="contact2 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d951921.0923989499!2d81.4878144!3d21.2539739!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6bc2fb97bb5469cd!2sDelhi%20Public%20School%2C%20Raipur!5e0!3m2!1sen!2sin!4v1629215865235!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="contact2 col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <img style="height: 300px;" src="R.%20Mukherjee.jpg">
@@ -53,6 +53,4 @@
             <a href="callto:8223039993"><i style="padding-right: 20px;" class="fa fa-phone"></i>&nbsp;&nbsp; +91 8223039993</a>
         </div>
     </section>
-</body>
-
-</html>
+</body></html>
